3.0.0-alpha.1 Adopted to Semver 2.0, added fenxlib.test module for base test, and fenxlib.api and fenxlib.config.json modules